Corrected faulty link to chapter 6

--- a/notebook/01  Slow Programming & Close Reading.ipynb
+++ b/notebook/01  Slow Programming & Close Reading.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -109,7 +109,7 @@
        "true"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,11 +120,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dowloading 00000388.jpg => 388_192v.jpg\n",
+      "Dowloading 00000389.jpg => 389_193r.jpg\n",
+      "Dowloading 00000390.jpg => 390_193v.jpg\n",
+      "Dowloading 00000391.jpg => 391_194r.jpg\n",
+      "Dowloading 00000392.jpg => 392_194v.jpg\n",
+      "Dowloading 00000393.jpg => 393_195r.jpg\n",
+      "Dowloading 00000394.jpg => 394_195v.jpg\n",
+      "Dowloading 00000395.jpg => 395_196r.jpg\n",
+      "Dowloading 00000396.jpg => 396_196v.jpg\n",
+      "Dowloading 00000397.jpg => 397_197r.jpg\n",
+      "Dowloading 00000398.jpg => 398_197v.jpg\n",
+      "Dowloading 00000399.jpg => 399_198r.jpg\n",
+      "Dowloading 00000400.jpg => 400_198v.jpg\n",
+      "Dowloading 00000401.jpg => 401_199r.jpg\n",
+      "Dowloading 00000402.jpg => 402_199v.jpg\n",
+      "Dowloading 00000403.jpg => 403_200r.jpg\n",
+      "Dowloading 00000404.jpg => 404_200v.jpg\n",
+      "Dowloading 00000405.jpg => 405_201r.jpg\n",
+      "Dowloading 00000406.jpg => 406_201v.jpg\n",
+      "Dowloading 00000407.jpg => 407_202r.jpg\n",
+      "Dowloading 00000408.jpg => 408_202v.jpg\n",
+      "Dowloading 00000409.jpg => 409_203r.jpg\n",
+      "Dowloading 00000410.jpg => 410_203v.jpg\n",
+      "Dowloading 00000411.jpg => 411_204r.jpg\n",
+      "Dowloading 00000412.jpg => 412_204v.jpg\n",
+      "Dowloading 00000413.jpg => 413_205r.jpg\n",
+      "Dowloading 00000414.jpg => 414_205v.jpg\n",
+      "Dowloading 00000415.jpg => 415_206r.jpg\n",
+      "Dowloading 00000416.jpg => 416_206v.jpg\n",
+      "Dowloading 00000417.jpg => 417_207r.jpg\n",
+      "Dowloading 00000418.jpg => 418_207v.jpg\n",
+      "Dowloading 00000419.jpg => 419_208r.jpg\n",
+      "Dowloading 00000420.jpg => 420_208v.jpg\n",
+      "Dowloading 00000421.jpg => 421_209r.jpg\n",
+      "Dowloading 00000422.jpg => 422_209v.jpg\n",
+      "Dowloading 00000423.jpg => 423_210r.jpg\n",
+      "Dowloading 00000424.jpg => 424_210v.jpg\n",
+      "Dowloading 00000425.jpg => 425_211r.jpg\n",
+      "Dowloading 00000426.jpg => 426_211v.jpg\n",
+      "Dowloading 00000427.jpg => 427_212r.jpg\n",
+      "Dowloading 00000428.jpg => 428_212v.jpg\n",
+      "Dowloading 00000429.jpg => 429_213r.jpg\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "388..429"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# The maximum zoom level images are statically available from this URL:\n",
     "# http://digital.wlb-stuttgart.de/filegroups/combha-m_323970265/max/\n",
@@ -183,11 +242,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<File:./resources/340003.pdf (closed)>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "open( \"./resources/340003.pdf\", \"wb\" ) do |file|\n",
     "   file << open( \"http://www.oapen.org/download?type=document&docid=340003\" ).read\n",
