--- a/notebook/05  A Cherry Picked.ipynb
+++ b/notebook/05  A Cherry Picked.ipynb
@@ -189,7 +189,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Proceed to the next chapter](/notebooks/06%20%20Combing%20and%20Mining.ipynb)"
+    "[Proceed to the next chapter](/notebooks/06%20%20Combining%20and%20Mining.ipynb)"
    ]
   },
   {
