--- a/notebook/06  Combining and Mining.ipynb
+++ b/notebook/06  Combining and Mining.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -19,10 +19,10 @@
     {
      "data": {
       "text/plain": [
-       "true"
+       "false"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
        ":as_json"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,9 +73,9 @@
     "    else\n",
     "      @surface = str\n",
     "    end\n",
-    "    # This is utterly simplisitic, yet I have not better\n",
+    "    # This is utterly simplisitic, yet I have no better\n",
     "    # idea at the moment…\n",
-    "    # Probably this should be done by models such as Person.\n",
+    "    # Probably this should also be done by models such as Person.\n",
     "    # E.g. Person would determine if this Word is that Person.\n",
     "    # That would also allow for competing interpretations btw.\n",
     "    if surface.downcase == \"willem\"\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
        "[\"Willem die Madocke maecte, [192va,22]\", \"daer hi dicken omme waecte,\", \"hem vernoyde so haerde\", \"dat die avonture van Reynaerde\", \"in Dietsche onghemaket bleven\", \"— die Arnout niet hevet vulscreven —\", \"dat hi die vijte dede soucken\", \"ende hise na den Walschen boucken\", \"in Dietsche dus hevet begonnen.\", \"God moete ons ziere hulpen jonnen!\", \"Nu keert hem daertoe mijn zin\", \"dat ic bidde in dit beghin\", \"beede den dorpren enten doren,\", \"ofte si commen daer si horen\", \"dese rijme ende dese woort\", \"(die hem onnutte sijn ghehoort),\", \"dat sise laten onbescaven.\", \"Te vele slachten si den raven,\", \"die emmer es al even malsch.\", \"Si maken sulke rijme valsch,\", \"daer si niet meer of ne weten [192vb]\", \"dan ic doe hoe dat si heeten\", \"die nu in Babilonien leven.\", \"Daden si wel, si soudens begheven.\", \"Dat en segghic niet dor minen wille.\", \"Mijns dichtens ware een ghestille,\", \"ne hads mi eene niet ghebeden\", \"die in groeter hovesscheden\", \"gherne keert hare saken.\", \"Soe bat mi dat ic soude maken\", \"dese avontuere van Reynaerde.\", \"Al begripic die grongaerde\", \"ende die dorpren ende die doren,\", \"ic wille dat dieghene horen\", \"die gherne pleghen der eeren\", \"ende haren zin daertoe keeren\", \"dat si leven hoofschelike,\", \"sijn si arem, sijn si rike,\", \"diet verstaen met goeden sinne.\", \"Nu hoert hoe ic hier beghinne!\", \"Het was in eenen tsinxendaghe\", \"dat beede bosch ende haghe\", \"met groenen loveren waren bevaen.\", \"Nobel die coninc hadde ghedaen\", \"sijn hof crayeren overal,\", \"dat hi waende, hadde hijs gheval,\", \"houden ten wel groeten love.\", \"Doe quamen tes sconinx hove\", \"alle die diere, groet ende cleene,\", \"sonder vos Reynaert alleene.\", \"Hi hadde te hove so vele mesdaen\", \"dat hire niet dorste gaen.\", \"Die hem besculdich kent, ontsiet.\", \"Also was Reynaerde ghesciet\", \"ende hieromme scuwedi sconinx hof,\", \"daer hi in hadde crancken lof.\", \"Doe al dat hofversamet was,\", \"was daer niemen, sonder die das,\", \"hi ne hadde te claghene over Reynaerde,\", \"den fellen metten grijsen baerde.\", \"Nu gaet hier up eene claghe.\", \"Isingrijn ende sine maghe\", \"ghinghen voer den coninc staen. [193ra]\", \"Ysengrijn begonste saen\", \"ende sprac: ‘Coninc heere,\", \"dor hu edelheit ende dor hu eere\", \"ende dor recht ende dor ghenade,\", \"ontfaerme hu miere scade\", \"die mi Reynaert heeft ghedaen,\", \"daer ic af dicken hebbe ontfaen\", \"groeten lachter ende verlies.\", \"Voer al dandre ontfaerme hu dies\", \"dat hi mijn wijfhevet verhoert\", \"ende mine kindre so mesvoert\", \"dat hise beseekede daer si laghen,\", \"datter twee noint ne saghen\", \"ende si worden staerblent.\", \"Nochtan hoendi mi sent.\", \"Het was sint so verre comen\", \"datter eenen dach af was ghenomen\", \"ende Reynaerd soude hebben ghedaen\", \"sine onsculde. Ende also saen\", \"alse die heleghe waren brocht,\", \"was hi andersins bedocht\", \"ende ontfoer ons in sine veste.\", \"Heere, dit kennen noch die beste\", \"die te hove zijn commen hier.\", \"Mi hevet Reynaert, dat felle dier,\", \"so vele te leede ghedaen,\", \"ic weet wel al sonder waen:\", \"al ware al tlaken paerkement\", \"dat men maket nu te Ghent,\", \"inne ghescreeft niet daeran.\", \"Dies zwijghics nochtan,\", \"neware mijns wives lachter\", \"ne mach niet bliven achter,\", \"no onversweghen no onghewroken.’\", \"Doe Ysengrijn dit hadde ghesproken,\", \"stont up een hondekijn, hiet Cortoys,\", \"ende claghede den coninc in Francsoys\", \"hoet so arem was wijleneere\", \"dat alles goets en hadde meere\", \"in eenen winter, in eene vorst,\", \"dan alleene eene worst\", \"ende hem Reynaert, die felle man, [193rb]\", \"die selve worst stal ende nam.\", \"Tybeert die cater die wart gram.\", \"Aldus hi sine tale began\", \"ende spranc midden in den rinc\", \"ende seide: ‘Heere coninc,\", \"dordat ghi Reynaerde zijt onhout,\", \"so en es hier jonc no hout,\", \"hi ne hebbe te wroughene jeghen hu.\", \"Dat Cortoys claghet nu,\", \"dats over menich jaer ghesciet.\", \"Die worst was mine, al en claghic niet.\", \"Ic hadse bi miere lust ghewonnen\", \"daer ic bi nachte quam gheronnen\", \"omme bejach in eene molen,\", \"daer ic die worst in hadde ghestolen\", \"eenen slapenden molenman.\", \"Hadder Cortoys yewet an,\", \"dan was bi niemene dan bi mi.\", \"Hets recht dat omberecht zi\", \"die claghe die Cortoys doet.’\", \"Pancer de bever sprac: ‘Dinct hu goet,\", \"Tybeert, dat men die claghe ombeere?\", \"Reynaert es een recht mordeneere\", \"ende een trekere ende een dief.\", \"Hi ne heeft oec niemene so lief,\", \"no den coninc, minen heere,\", \"hi ne wilde dat hi lijf ende eere\", \"verlore, mochtire an winnen\", \"een vet morzeel van eere hinnen.\", \"Wat sechdi van eere laghe?\", \"En dedi ghistren in den daghe\", \"eene die meeste overdaet\", \"an Cuwaerde den hase, die hier staet,\", \"die noyt eenich dier ghedede?\", \"Want hi hem binnen sconinX vrede\", \"ende binnen des coninX gheleede\", \"ghelovede te leerne sinen crede\", \"ende soudene maken capelaen.\", \"Doe dedine sitten gaen\", \"vaste tusschen sine beene.\", \"Doe begonsten si overeene\", \"spellen ende lesen beede [193va]\", \"ende lude te zinghene crede.\", \"Mi gheviel dat ic te dien tijden\", \"ter selver stede soude lijden.\", \"Doe hoerdic haerre beeder sanc\", \"ende maecte daerwaert minen ganc\", \"met eere arde snelre vaerde.\", \"Doe vandic daer meester Reynaerde,\", \"die ziere lessen hadde begheven\", \"die hi tevoren up hadde gheheven,\", \"ende diende van sinen houden spelen\", \"ende hadde Coewaerde bi der kelen\", \"ende soude hem thoeft afhebben ghenomen\", \"waer ic hem niet te hulpen comen\", \"bi avontueren in dien stonden.\", \"Siet hier noch die verssche wonden\", \"ende die teekine, heere coninc,\", \"die Coewaert van hem ontﬁnc.\", \"Laetti dit bliven onghewroken,\", \"dat hu verde dus es tebroken,\", \"ghi ne wreket als huwe mannen wijsen,\", \"men saelt huwen kindren mesprijsen\", \"hiernaer over wel menich jaer.’\", \"‘Bi Gode, Pancer, ghi secht waer,’\", \"sprac Ysengrijn daer hi stoet.\", \"‘Heere, waer Reynaerd doot, het waer ons goet,\", \"also behoude mi God mijn leven.\", \"Neware wert hem dit vergheven,\", \"hi sal noch hoenen binnen eere maent\", \"sulken dies niet ne bewaent.’\", \"Doe spranc up Grinbert die das,\", \"die Reynaerts broedersone was,\", \"met eere verbolghenlike tale:\", \"‘Heere Ysengrijn, men weet dat wale\", \"ende hets een hout bijspel:\", \"viants mont seit selden wel.\", \"Verstaet, neemt miere talen goem:\", \"ic wilde, hi hinghe an eenen boem\", \"bi ziere kelen als een dief\", \"die andren heeft ghedaen meest grief.\", \"Heere Ysengrijn, wildi angaen\", \"soendinc ende dat ontfaen,\", \"daertoe willic helpen gherne. [193vb]\", \"Mijn oem en saelt hem oec niet wernen.\", \"Entie meest andren heeft mesdaen\", \"sal den andren in baten staen\", \"van minen oem ende van hu.\", \"Al comt hi niet claghen nu,\", \"ware mijn oem wel te hove\", \"ende stonde in sconinx love,\", \"heere Ysengrijn, als ghi doet,\", \"en soude den coninc niet dincken goet\", \"ende ghi ne bleves heden onbegrepen,\", \"dat ghi sijn vel so hebt ghenepen\", \"so dicwile met huwen scerpen tanden,\", \"dat hi niet ne conde ghehanden.’\", \"Ysengrijn sprac: ‘Hebdi gheleert\", \"an huwen oem dus lieghen apeert?’\", \"‘In hebbe daeran niet gheloghen.\", \"Ghi hebt minen oem bedroghen\", \"arde dicke in menegher wijsen.\", \"Ghi mesleettene van den pladijse\", \"die hi hu warp van der kerren,\", \"doe ghi hem volghet van verren\", \"ende ghi die beste pladijse uplaset,\", \"daer ghi hu ane hadt versadet.\", \"Ghi ne gaeft hem no goet no quaet,\", \"sonder alleene eenen pladijsengraet\", \"dat ghi hem te jeghen brocht,\", \"dordat ghine niet en mocht.\", \"Sint hoendine van eenen bake\", \"die vet was ende van goeder smake,\", \"dien ghi leit in huwen muzeele.\", \"Doe Reynaert heesschede zijn deele,\", \"andwoerdi hem in scerne:\", \"“Hu deel willic hu gheven gherne,\", \"Reynaert, scone jonghelinc!\", \"Die wisse daer die bake an hinc,\", \"becnause, so es so vet.”\", \"Reynaerde waes lettel te bet\", \"dat hi den goeden bake ghewan\", \"in sulker zorghen, dattene een man\", \"vinc ende warpene in sinen zac.\", \"Dese pine ende dit onghemac\", \"hevet hi leden dor Ysengrijne [194ra]\", \"ende ondert waerven meer dan ic hu rijme.\", \"Ghi heeren, dinct hu dit ghenouch?\", \"Nochtan om meer onghevouch\", \"dat hi claghet om sijn wijf,\", \"die Reynaerde hevet al haer lijf\", \"ghemint; so doet hi hare.\", \"Al ne makeden zijt niet mare,\", \"ic dart wel segghen over waer\", \"dat langher es dan VII jaer\", \"dat Reynaert hevet hare trauwe.\", \"Omdat Haersint, die scone vrouwe,\", \"dor minne ende dor quade zede\", \"Reynaert sinen wille dede,\", \"wattan? So was sciere ghenesen.\", \"Wat talen mach daeromme wesen?\", \"Nu maket heere Cuwaert, die hase,\", \"eene claghe van eere blase.\", \"Of hi den credo niet wel en las,\", \"Reynaerd, die zijn meester was,\", \"mochte hi sinen clerc niet blauwen?\", \"Dat ware onrecht, entrauwen.\", \"Cortoys claghet om eene worst\", \"die hi verloes in eene vorst.\", \"Die claghe ware bet verholen:\", \"ende hoerdi dat so was ghestolen?\", \"Male quesite male perdite:\", \"over rechtwert men qualike quite\", \"dat men hevet qualic ghewonnen.\", \"Wie sal Reynaerde dat verjonnen\", \"Niemen die recht versceeden can.\", \"Reynaert es een gherecht man.\", \"Sint dat die coninc sinen ban\", \"hevet gheboden ende sinen vrede,\", \"so weetic wel dat hi ne dede\", \"dinc negheene dan of hi ware\", \"hermite ofte clusenare.\", \"Naest siere huut draecht hi een hare.\", \"Binnen desen naesten jare\", \"so ne hat hi vleesch, no Wilt no tam.\", \"Dat seidi die ghistren danen quam.\", \"Malcroys hevet hi begheven, [194rb]\", \"sinen casteel, ende hevet upheven\", \"eene cluse daer hi leghet in.\", \"Ander bejach no ander ghewin\", \"so wanic wel dat hi ne hevet\", \"dan karitate die men hem ghevet.\", \"Bleec es hi ende magher van pinen.\", \"Hongher, dorst, scerpe karijnen\", \"doghet hi voer sine zonden.’\", \"Recht te desen selven stonden,\", \"doe Grimbert stont in dese tale,\", \"saghen si van berghe te dale\", \"Canticler commen ghevaren,\", \"ende brochte up eene bare\", \"eene doode hinne ende hiet Coppe,\"]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +177,7 @@
     "collapsed": true
    },
    "source": [
-    "[Proceed to the next chapter](/notebooks/07%20%20Adding%20a%20First%20Visualization.ipynb)"
+    "[Proceed to the next chapter](/notebooks/07%20%20The%20Distracting%20Interface.ipynb)"
    ]
   },
   {
