--- a/notebook/03  On Iterations.ipynb
+++ b/notebook/03  On Iterations.ipynb
@@ -13,11 +13,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The byciclist rides on <part>the</part> bike\n",
+      "The train conductor asks for <part>the</part> tickets\n",
+      "The train conductor asks for <part>the</part> tickets\n"
+     ]
+    }
+   ],
    "source": [
     "puts \"The byciclist rides on the bike\".gsub( \"the\", \"<part>the</part>\" )\n",
     "puts \"The train conductor asks for the tickets\".gsub( \"the\", \"<part>the</part>\" )\n",
@@ -33,11 +43,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The byciclist rides on <part>the</part> bike\n",
+      "The train conductor asks for <part>the</part> tickets\n",
+      "The train conductor asks for <part>the</part> tickets\n"
+     ]
+    }
+   ],
    "source": [
     "def mark_part( string )\n",
     "  string.gsub( \"the\", \"<part>the</part>\" ) \n",
@@ -59,11 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<part>The</part> byciclist rides on <part>the</part> bike\n",
+      "<part>The</part> train conductor asks for <part>the</part> tickets\n",
+      "<part>The</part> train conductor asks for <part>the</part> tickets\n"
+     ]
+    }
+   ],
    "source": [
     "def mark_part( string )\n",
     "  string.gsub( /(t|T)he/, '<part>\\1he</part>' ) \n",
@@ -91,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -102,7 +132,7 @@
        "true"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -132,7 +162,7 @@
        ":matches"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -558,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -569,7 +599,7 @@
        ":matches"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -615,7 +645,7 @@
        ":initialize"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -655,7 +685,7 @@
        ":parse"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -736,7 +766,7 @@
        ":above_treshold"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -1145,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -1156,7 +1186,7 @@
        ":matches"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": false
